[package]
name = "anseo-storage"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anseo-core = { path = "../core", features = ["sqlx"] }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
# Story 43.2 domain-verification: token hashing + constant-time compare +
# pluggable async DNS resolver trait.
sha2 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
# Story 19.2 dedup test: feed real engine output through the repo. No normal
# dependency from storage on recommendations, so this is cycle-free.
anseo-recommendations = { path = "../recommendations" }
# Story 43.7 comms integration test: exercise the comms repo against the
# embedded migrations. anseo-comms depends only on core, so this is cycle-free.
anseo-comms = { path = "../comms" }
