[package]
name = "opengeo-wire-schema"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
opengeo-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
schemars = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
